Issue #22604: Fix assertion error in debug mode when dividing a complex number by (nan+0j).